--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "illuminate/config": "~5.0",
     "illuminate/support": "~5.0",
     "laravel/framework": ">=5.0",
-    "guzzlehttp/guzzle": "~6.0"
+    "guzzlehttp/guzzle": ">=5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
